Update Download all manuscript revisions.ipynb

--- a/Download all manuscript revisions.ipynb
+++ b/Download all manuscript revisions.ipynb
@@ -8,7 +8,7 @@
     "# Download all manuscript revisions\n",
     "\n",
     "## Description\n",
-    "Given an OpenReview invitation, download pdfs of all its revisions.\n",
+    "Given an OpenReview invitation, download pdfs of all its manuscripts, including all their revisions.\n",
     "\n",
     "## Notes\n",
     "* I don't know what the significance of the different versions are, in particular which is the one considered for peer review, which is the camera ready version, which version is the 'main' version in the forum -- I just got the main/reference distinction from the API.\n",
