--- a/get-paper-timeline.ipynb
+++ b/get-paper-timeline.ipynb
@@ -13,7 +13,8 @@
     "## Notes\n",
     "* I am not sure what the difference is between `cdate`, `tcdate` and other timestamps. I will check with OpenReview folks to confirm that I am using the correct field.\n",
     "* The list of events does not include comment edits, including score changes. I do not think these are available, but I can double check with OpenReview folks on this too.\n",
-    "* I haven't done any of the work to print this into a nice csv or anything, but I think it should be straightforward. You can use `event.stringify(pretty=False)` if you would prefer raw timestamps instead of human readable."
+    "* I haven't done any of the work to print this into a nice csv or anything, but I think it should be straightforward. You can use `event.stringify(pretty=False)` if you would prefer raw timestamps instead of human readable.\n",
+    "* This code was written with th"
    ]
   },
   {
@@ -29,7 +30,7 @@
     "import os\n",
     "\n",
     "# Change these values according to your needs\n",
-    "INVITATION = 'ICLR.cc/2018/Conference/-/Blind_Submission'\n",
+    "INVITATION = 'ICLR.cc/2019/Conference/-/Blind_Submission'\n",
     "LIMIT = 10 # Number of papers to download all revisions for\n",
     "\n",
     "# A client is required for any OpenReview API actions\n",
@@ -437,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8318dd91",
+   "id": "e7603d3e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41c0390",
+   "id": "9a7a6ca8",
    "metadata": {},
    "outputs": [],
    "source": []
