fix issue with PapersWithCode revisions

--- a/get-paper-timeline.ipynb
+++ b/get-paper-timeline.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "dc3287a3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "d9165fab",
    "metadata": {},
    "outputs": [],
@@ -82,8 +82,13 @@
     "    events = []\n",
     "    for revision in guest_client.get_references(\n",
     "            referent=forum_note.id, original=True):\n",
+    "        if revision.details['original'] is not None:\n",
+    "            initiator = get_initiator(revision)\n",
+    "        else:\n",
+    "            initiator = GENERIC_INITIATOR_AUTHORS\n",
+    "        \n",
     "        events.append(Event(\n",
-    "            forum_note.id, EventType.REVISION, GENERIC_INITIATOR_AUTHORS,\n",
+    "            forum_note.id, EventType.REVISION, initiator,\n",
     "            revision.id, revision.tcdate, revision.replyto))\n",
     "  \n",
     "    this_forum_notes = guest_client.get_notes(forum=forum_note.id)\n",
@@ -106,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "dd7f5c8b",
    "metadata": {},
    "outputs": [
@@ -130,8 +135,8 @@
       "2018-12-03T12:52:13\trylV-2C9KQ\tComment\tAnonReviewer1\tH1xSIp171N\tHJeslXQCTX\n",
       "2018-12-12T18:16:14\trylV-2C9KQ\tMetareview\tArea_Chair1\tByxI6UMklE\trylV-2C9KQ\n",
       "2019-02-22T15:37:18\trylV-2C9KQ\tRevision\tAuthors\tS1wKpATB4\tNone\n",
-      "2022-02-10T06:32:36\trylV-2C9KQ\tRevision\tAuthors\trM3Avuzy9\tNone\n",
-      "2022-03-11T00:09:01\trylV-2C9KQ\tRevision\tAuthors\tBEe8dtIubq\tNone\n",
+      "2022-02-10T06:32:36\trylV-2C9KQ\tRevision\tConference\trM3Avuzy9\tNone\n",
+      "2022-03-11T00:09:01\trylV-2C9KQ\tRevision\tConference\tBEe8dtIubq\tNone\n",
       "\n",
       "\n"
      ]
@@ -150,6 +155,22 @@
     "    if i + 1 == LIMIT:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c05779c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ac828a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
