add grobid command

--- a/extracting-pdf-text.ipynb
+++ b/extracting-pdf-text.ipynb
@@ -20,6 +20,10 @@
     "You will need Gradle to run Grobid. I hope that the following works for you, because I don't know other ways to do this :-(\n",
     "```\n",
     "brew install gradle\n",
+    "cd grobid-0.7.1/\n",
+    "./gradlew clean install\n",
+    "cd ../\n",
+    "\n",
     "```\n",
     "\n",
     "Create a directory in which you will save the pdfs to be extracted, e.g. `pdfs/`, and a directory where the xml files will be dumped, e.g. `xmls/`:\n",
@@ -31,9 +35,11 @@
     "Copy your pdfs into this directory, then run:\n",
     "\n",
     "```\n",
-    "cd grobid-0.7.1/\n",
-    "./gradlew clean install\n",
-    "\n",
+    "java -Xmx4G -jar grobid-0.7.1/grobid-core/build/libs/grobid-core-0.7.1-onejar.jar \\\n",
+    "\t-gH grobid-0.7.1/grobid-home \\\n",
+    "\t-dIn pdfs/ \\\n",
+    "\t-dOut xmls/ \\\n",
+    "\t-exe processFullText \n",
     "```\n",
     "\n",
     "Below is example code for extracting the section headers and text from a pdf."
