--- a/extracting-pdf-text.ipynb
+++ b/extracting-pdf-text.ipynb
@@ -166,6 +166,32 @@
     "        if flag:\n",
     "          print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c768ace0",
+   "metadata": {},
+   "source": [
+    "### Extract an abstract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74996934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_abstract(filename):\n",
+    "    abstract = \"\"\n",
+    "    for j in ET.parse(filename).getroot().findall(HEADER_ID)[0].findall(PROFILE_ID)[0]:\n",
+    "        if j.tag == ABSTRACT_ID: #have trouble searching to ABSTRACT_ID in line above; iterating works \n",
+    "            \n",
+    "            for div in j:\n",
+    "                for p in div.findall(P_ID):\n",
+    "                    abstract = abstract + \"\".join(p.itertext())\n",
+    "    return abstract"
+   ]
   }
  ],
  "metadata": {
@@ -184,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
