oops forgot headers

--- a/extracting-pdf-text.ipynb
+++ b/extracting-pdf-text.ipynb
@@ -182,6 +182,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "HEADER_ID = f\"{PREFIX}teiHeader\"\n",
+    "PROFILE_ID = f\"{PREFIX}profileDesc\"\n",
+    "ABSTRACT_ID = f\"{PREFIX}abstract\"\n",
+    "\n",
     "def get_abstract(filename):\n",
     "    abstract = \"\"\n",
     "    for j in ET.parse(filename).getroot().findall(HEADER_ID)[0].findall(PROFILE_ID)[0]:\n",
