added reference getting

--- a/download-all-revisions.ipynb
+++ b/download-all-revisions.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6e4a8f7b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "# Change these values according to your needs\n",
     "INVITATION = 'ICLR.cc/2019/Conference/-/Blind_Submission'\n",
     "OUTPUT_DIR = \"./ICLR2019_pdfs\"\n",
-    "LIMIT = 10 # Number of papers to download all revisions for\n",
+    "LIMIT = 1 # Number of papers to download all revisions for\n",
     "\n",
     "# A client is required for any OpenReview API actions\n",
     "guest_client = openreview.Client(baseurl='https://api.openreview.net')"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3a78bd19",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "            pdf filename with timestamps in forum_dir\n",
     "    \"\"\"\n",
     "    nice_timestamp = datetime.fromtimestamp(\n",
-    "        timestamp/1000).strftime('%Y-%m-%dT%H:%M:%S') # Something human-readable for the file name\n",
+    "        timestamp/1000).strftime('%Y-%m-%dT%H_%M_%S') # Something human-readable for the file name\n",
     "    if is_reference:\n",
     "        main_or_revision =  \"revision\"\n",
     "    else:\n",
@@ -80,10 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "43207439",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting revisions for rJl0r3R9KX: 100%|█████████████| 8/8 [00:07<00:00,  1.02it/s]\n",
+      "Getting revisions for SylCrnCcFX: 100%|███████████| 10/10 [00:24<00:00,  2.50s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "pdfs_dir = OUTPUT_DIR + \"/\"\n",
     "os.makedirs(pdfs_dir, exist_ok=True)\n",
@@ -96,9 +105,11 @@
     "    for revision in tqdm.tqdm(guest_client.get_references(\n",
     "            referent=forum_note.id, original=True),\n",
     "            desc=\"Getting revisions for {0}\".format(forum_note.id)):\n",
-    "        write_pdf_to_file(guest_client, forum_dir, revision)\n",
-    "    \n",
-    "    if i == LIMIT:\n",
+    "        try:\n",
+    "            write_pdf_to_file(guest_client, forum_dir, revision)\n",
+    "        except openreview.OpenReviewException:\n",
+    "            continue\n",
+    "    if i == LIMIT + 1:\n",
     "        break"
    ]
   },
@@ -106,6 +117,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8b21f82d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c751fe2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
