--- a/extracting-pdf-text.ipynb
+++ b/extracting-pdf-text.ipynb
@@ -57,18 +57,22 @@
     "import xml.etree.ElementTree as ET\n",
     "\n",
     "PREFIX = \"{http://www.tei-c.org/ns/1.0}\"\n",
-    "TEXT_ID = f\"{PREFIX}text\"\n",
-    "BODY_ID = f\"{PREFIX}body\"\n",
+    "\n",
     "DIV_ID = f\"{PREFIX}div\"\n",
     "HEAD_ID = f\"{PREFIX}head\"\n",
     "P_ID = f\"{PREFIX}p\"\n",
     "\n",
+    "BIBLSTRUCT_ID = f\"{PREFIX}biblStruct\"\n",
+    "ANALYTIC_ID = f\"{PREFIX}analytic\"\n",
+    "\n",
+    "def first_child(parent, child_part):\n",
+    "  return parent.findall(f'{PREFIX}{child_part}')[0]\n",
     "\n",
     "def get_docs(filename):\n",
     "  section_titles = []\n",
     "  section_texts = []\n",
-    "  divs = ET.parse(filename).getroot().findall(\n",
-    "    TEXT_ID)[0].findall(BODY_ID)[0].findall(DIV_ID)\n",
+    "  root = ET.parse(filename).getroot()\n",
+    "  divs = first_child(first_child(root, \"text\"), \"body\").findall(DIV_ID)\n",
     "  for div in divs:\n",
     "    header_node, = div.findall(HEAD_ID)\n",
     "    section_titles.append(header_node.text)\n",
@@ -78,13 +82,28 @@
     "    section_texts.append(text)\n",
     "  return section_titles, section_texts\n",
     "\n",
+    "def get_references(filename):\n",
+    "  reference_titles = []\n",
+    "  \n",
+    "  divs = first_child(first_child(ET.parse(filename).getroot(), 'text'), 'back').findall(DIV_ID)\n",
+    "  for div in divs:\n",
+    "    if not div.attrib['type'] == 'references':\n",
+    "      continue\n",
+    "    for ref in first_child(div, \"listBibl\").findall(BIBLSTRUCT_ID):\n",
+    "      maybe_titles = ref.findall(ANALYTIC_ID)\n",
+    "      if maybe_titles:\n",
+    "        reference_titles.append(first_child(maybe_titles[0], 'title').text)\n",
+    "  return reference_titles\n",
     "\n",
     "for filename in glob.glob(\"xmls/*\"):\n",
     "  sections, texts = get_docs(filename)\n",
     "  for section, text in zip(sections, texts):\n",
     "    print(section)\n",
     "    print(text[:500] + \"...\")\n",
-    "    print()\n"
+    "    print()\n",
+    "  references = get_references(filename)\n",
+    "  for i in references:\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -166,6 +185,14 @@
     "        if flag:\n",
     "          print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72a8dbcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
