--- a/download-all-revisions.ipynb
+++ b/download-all-revisions.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6e4a8f7b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "3a78bd19",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "43207439",
    "metadata": {},
    "outputs": [
@@ -88,8 +88,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Getting revisions for rJl0r3R9KX: 100%|█████████████| 8/8 [00:07<00:00,  1.02it/s]\n",
-      "Getting revisions for SylCrnCcFX: 100%|███████████| 10/10 [00:24<00:00,  2.50s/it]\n"
+      "Getting revisions for rJl0r3R9KX: 100%|██████████| 8/8 [00:04<00:00,  1.74it/s]\n",
+      "Getting revisions for SylCrnCcFX: 100%|████████| 10/10 [00:08<00:00,  1.25it/s]\n",
+      "Getting revisions for H1xAH2RqK7: 100%|██████████| 3/3 [00:01<00:00,  2.12it/s]\n"
      ]
     }
    ],
@@ -146,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
