--- a/download-all-revisions.ipynb
+++ b/download-all-revisions.ipynb
@@ -1436,7 +1436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = openreview.Client(baseurl='https://api.openreview.net', username='kennard@cs.umass.edu', password='owyel8loWy')"
+    "client = openreview.Client(baseurl='https://api.openreview.net', username='kennard@cs.umass.edu', password='nopassword')"
    ]
   },
   {
