--- a/notebooks/retrieve_review_rebuttal_threads.ipynb
+++ b/notebooks/retrieve_review_rebuttal_threads.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "645b0cdd",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2595it [11:36,  3.72it/s]"
+      "490it [01:57,  4.19it/s]"
      ]
     },
     {
@@ -34,9 +34,10 @@
      "output_type": "stream",
      "text": [
       "Review lengths (number of notes)\n",
-      "Counter({1: 9948, 2: 76, 3: 2})\n",
+      "Counter({1: 1496, 2: 15})\n",
       "Rebuttal lengths (number of notes)\n",
-      "Counter({1: 9386, 2: 1046, 3: 170, 4: 29, 5: 7, 6: 2})\n"
+      "Counter()\n",
+      "Counter({3: 439, 4: 40, 2: 7, 5: 4})\n"
      ]
     },
     {
@@ -56,7 +57,8 @@
     "\n",
     "\n",
     "# Change these values according to your needs\n",
-    "INVITATION = 'ICLR.cc/2021/Conference/-/Blind_Submission'\n",
+    "#INVITATION = 'ICLR.cc/2017/Conference/-/Blind_Submission'\n",
+    "INVITATION = 'ICLR.cc/2017/conference/-/submission'\n",
     "LIMIT = 10 # Number of papers to build timelines for\n",
     "\n",
     "def get_replies(note, discussion_notes):\n",
@@ -99,11 +101,13 @@
     "\n",
     "review_lens = collections.Counter()\n",
     "rebuttal_lens = collections.Counter()\n",
+    "num_reviews_counter = collections.Counter()\n",
     "event_list = []\n",
     "for i, forum_note in tqdm.tqdm(enumerate(openreview.tools.iterget_notes(\n",
     "        guest_client, invitation=INVITATION))):\n",
     "  discussion_notes = guest_client.get_notes(forum=forum_note.id)\n",
     "  review_threads = get_review_threads(discussion_notes)\n",
+    "  num_reviews_counter[len(review_threads)] += 1\n",
     "  for r in review_threads:\n",
     "    review_lens[len(r)] += 1\n",
     "  rebuttal_threads = get_rebuttal_threads(review_threads, discussion_notes)\n",
@@ -113,7 +117,8 @@
     "print(\"Review lengths (number of notes)\")\n",
     "print(review_lens)\n",
     "print(\"Rebuttal lengths (number of notes)\")\n",
-    "print(rebuttal_lens)\n"
+    "print(rebuttal_lens)\n",
+    "print(num_reviews_counter)\n"
    ]
   },
   {
@@ -124,7 +129,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "    "
+    "Counter({3: 439, 4: 40, 2: 7, 5: 4})\n",
+    "    Counter({3: 892, 4: 18, 0: 1})"
    ]
   }
  ],
