--- a/notebooks/detailed-discussion-structures.ipynb
+++ b/notebooks/detailed-discussion-structures.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a27130cb54740e5972458089820aa91",
+       "model_id": "c9a82631bc6143a595c40704aa1a2da5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,16 +52,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-17 10:08:16 INFO: Loading these models for language: en (English):\n",
+      "2023-01-29 14:59:32 INFO: Loading these models for language: en (English):\n",
       "========================\n",
       "| Processor | Package  |\n",
       "------------------------\n",
       "| tokenize  | combined |\n",
       "========================\n",
       "\n",
-      "2022-05-17 10:08:16 INFO: Use device: cpu\n",
-      "2022-05-17 10:08:16 INFO: Loading: tokenize\n",
-      "2022-05-17 10:08:16 INFO: Done loading processors!\n"
+      "2023-01-29 14:59:32 INFO: Use device: cpu\n",
+      "2023-01-29 14:59:32 INFO: Loading: tokenize\n",
+      "2023-01-29 14:59:32 INFO: Done loading processors!\n"
      ]
     }
    ],
@@ -71,17 +71,25 @@
     "import pandas as pd\n",
     "import pptree\n",
     "import stanza\n",
+    "STANZA_PIPELINE = stanza.Pipeline(lang=\"en\",\n",
+    "                                  processors=\"tokenize\")\n",
     "import tqdm\n",
+    "\n",
+    "\n",
+    "# A client is required for any OpenReview API actions\n",
+    "guest_client = openreview.Client(baseurl='https://api.openreview.net')\n",
     "\n",
     "# Change these values according to your needs\n",
     "INVITATION = 'ICLR.cc/2019/Conference/-/Blind_Submission'\n",
-    "# A client is required for any OpenReview API actions\n",
-    "guest_client = openreview.Client(baseurl='https://api.openreview.net')\n",
-    "LIMIT = 10\n",
-    "\n",
-    "\n",
-    "STANZA_PIPELINE = stanza.Pipeline(lang=\"en\",\n",
-    "                                  processors=\"tokenize\")"
+    "LIMIT = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f065b37e",
+   "metadata": {},
+   "source": [
+    "The cell below contains helper functions including a `NoteNode` object which is intended to be a wrapper around the Note object in the OpenReview API. The main code is in the following cell."
    ]
   },
   {
@@ -92,8 +100,15 @@
    "outputs": [],
    "source": [
     "def get_author_code(signature):\n",
-    "  \"\"\"Returns a short code representing author type.\"\"\"\n",
-    "  sig = signature.split(\"/\")[-1]\n",
+    "  \"\"\"Returns a short code representing author type.\n",
+    "  \n",
+    "     This code is only tested for ICLR 2019, but small changes should make it work for other years.\n",
+    "  \"\"\"\n",
+    "  \n",
+    "  # The signature field almost always contains a list of length 1, and the item is almost always of\n",
+    "  # the format \"ICLR.cc/<year>/Conference/Paper1592/<entity>\"\n",
+    "  sig = signature.split(\"/\")[-1] # extracting the 'entity' part of the signature\n",
+    "  \n",
     "  if sig == 'Authors':\n",
     "    return \"A\"\n",
     "  elif sig == \"Conference\":\n",
@@ -157,6 +172,7 @@
     "  return root_node.gather_stats()\n",
     "\n",
     "def get_content_from_note(note):\n",
+    "  \"\"\"Extracts the main text from a Note.\"\"\"\n",
     "  if 'review' in note.content:\n",
     "    return note.content['review']\n",
     "  elif 'comment' in note.content:\n",
@@ -254,10 +270,7 @@
     "    stats[\"mean_path_length\"] = mean([len(i) for i in paths.values()])\n",
     "    stats[\"max_num_participants\"] = max([len(set(get_commenter_path(i))) for i in paths.values()])\n",
     "    \n",
-    "    return stats\n",
-    "    \n",
-    "\n",
-    "  "
+    "    return stats"
    ]
   },
   {
@@ -270,36 +283,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [00:53,  5.91s/it]\n"
+      "9it [00:53,  5.94s/it]\n"
      ]
-    }
-   ],
-   "source": [
-    "df_dicts = []\n",
-    "for i, forum_note in tqdm.tqdm(enumerate(openreview.tools.iterget_notes(\n",
-    "        guest_client, invitation=INVITATION))):\n",
-    "    this_forum_notes = guest_client.get_notes(forum=forum_note.id)\n",
-    "    df_dicts.append(get_review_discussions(this_forum_notes))\n",
-    "    if i == LIMIT - 1:\n",
-    "      break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fea2a9a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame.from_dict(d for d in df_dicts if d is not None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b7ecd256",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -507,16 +493,18 @@
     }
    ],
    "source": [
+    "df_dicts = []\n",
+    "for i, forum_note in tqdm.tqdm(enumerate(openreview.tools.iterget_notes(\n",
+    "        guest_client, invitation=INVITATION))):\n",
+    "    this_forum_notes = guest_client.get_notes(forum=forum_note.id)\n",
+    "    df_dicts.append(get_review_discussions(this_forum_notes))\n",
+    "    if i == LIMIT - 1:\n",
+    "      break\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(d for d in df_dicts if d is not None)\n",
+    "\n",
     "display(df.sort_values(by='max_num_participants', ascending=False))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27fe56a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -535,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
